[project]
name = "CobraBay"
version = "0.0.1"
authors = [
  { name="Christopher Gill", email="chris@chrisgill.net" },
]
description = "CobraBay Parking Guidance System"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Topic :: Home Automation"
]

[project.urls]
Homepage = "https://github.com/chrisgilldc/cobrabay"
Issues = "https://github.com/chrisgilldc/cobrabay/issues"