[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/chrisgilldc/cobrabay"
Issues = "https://github.com/chrisgilldc/cobrabay/issues"

[tool.poetry]
name = "Cobrabay"
version = "0.4.2a0"
description = "Cobrabay Parking Guidance System"
authors = ["Chris Gill <chris@chrisgill.net>"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Topic :: Home Automation"
]

[tool.poetry.dependencies]
python = "^3.11"
pid = "^3.0.4"
rpi-bad-power = "^0.1.0"
adafruit-blinka = "^8.50.0"
cerberus = "^1.3.6"
gpiozero = "^2.0.1"
numpy = "^2.2.1"
paho-mqtt = "^2.1.0"
pint = "^0.24.4"
pyserial = "^3.5"
pyyaml = "^6.0.2"
logging = "^0.4.9.6"
adafruit-circuitpython-aw9523 = "^1.1.10"
adafruit-circuitpython-vl53l1x = "^1.2.0"
pillow = "^11.0.0"
smbus2 = "^0.5.0"

[tool.poetry.scripts]
cobrabay = "cobrabay.cli:cli"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/legacy/"
priority = "supplemental"



