[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
requires-python = ">=3.11"
name = "Cobrabay"
version = "0.4.2a5"
description = "Cobrabay Parking Guidance System"
authors = [{name="Chris Gill", email="chris@chrisgill.net"}]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Topic :: Home Automation"
]
dependencies = [
    "adafruit-blinka~=8.56.0",
    "adafruit-circuitpython-aw9523~=1.1.11",
    "adafruit-circuitpython-vl53l1x~=1.2.2",
    "gpiozero~=2.0.1",
    #"ha-mqtt-discoverable~=0.19.1",
    "lgpio~=0.2.2.0",
    "marshmallow~=4.0.0",
    "numpy~=2.2.4",
    "paho-mqtt~=2.1.0",
    "pid~=3.0.4",
    "pillow~=11.0.0",
    "pint~=0.24.4",
    "psutil~=6.1.1",
    "pyserial~=3.5",
    "pyyaml~=6.0.2",
    "rpi-bad-power~=0.1.0",
    "smbus2~=0.5.0",
    # Replace once published
    "rgbmatrix@git+https://github.com/chrisgilldc/rpi-rgb-led-matrix",
    "rgbmultitool@git+https://github.com/chrisgilldc/rgbmultitool",
    # PR submitted to include updates. Use his for now.
    "ha-mqtt-discoverable@git+https://github.com/chrisgilldc/ha-mqtt-discoverable"
]

[project.urls]
Homepage = "https://github.com/chrisgilldc/cobrabay"
Issues = "https://github.com/chrisgilldc/cobrabay/issues"

[project.optional-dependencies]
test = [
    "pytest",
    "pint"
]

[project.scripts]
cobrabay = "cobrabay.tools.cli:cbcli"